@@ -335,6 +335,9 @@ Release 0.21.0 - Unreleased
                (Todd Lipcon via Stack)
    HBASE-2449  Local HBase does not stop properly
    HBASE-2539  Cannot start ZK before the rest in tests anymore
+   HBASE-2561  Scanning .META. while split in progress yields
+               IllegalArgumentException (Todd Lipcon via Stack)
+
 
   IMPROVEMENTS
    HBASE-1760  Cleanup TODOs in HTable
